@@ -25,3 +25,15 @@ Description: {$description} (with dependency)
  be an empty package.
  .
  This package has a dependency on sensible-utils.
+
+Package: {$source}-has-recommends
+Architecture: all
+Depends: $\{misc:Depends\}
+Recommends: sensible-utils
+Description: {$description} (with Recommends dependency)
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+ .
+ This package has a Recommends dependency on sensible-utils.
