@@ -1,0 +1,1 @@
+test-script var/lib/test3
